--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <p id="message-el">Want to play a round?</p>
     <p id="card-el">Cards:</p>
     <p id="sum-el">Sum:</p>
-    <button id="startBtn">Start Game</button>
-    <button id="newCardBtn">New Card</button>
+    <button id="startBtn" onclick="startGame()">Start Game</button>
+    <button id="newCardBtn" onclick="newCard()">New Card</button>
         <script src="./index.js"></script>
 </body>
 </html>
