--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p id="sum-el">Sum:</p>
     <button id="startBtn" onclick="startGame()">Start Game</button>
     <button id="newCardBtn" onclick="newCard()">New Card</button>
+    <p>Price : 145$</p>
         <script src="./index.js"></script>
 </body>
 </html>
